Our Hero Section is done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <!-- Tag -> <tagNameStart> </tagNameEnd> -->
     <!-- HTML Tag -->
     <title>Our Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- Start Tag, content, end tag = HTML Element -->
   </head>
   <body>
     <section>
-    <!-- Header Part -->
+      <!-- Header Part -->
       <div class="header">
         <div class="logo">
           <h2>SoulDesign</h2>
@@ -23,7 +23,23 @@
           <a href="#">Contact</a>
         </div>
       </div>
-      <div class="hero"></div>
+      <div class="hero">
+        <div class="content">
+          <h1>
+            CREATIVE UI <br />
+            <span class="designer">DESIGNER</span>
+          </h1>
+          <div class="actions">
+            <button class="hire-me">Hire Me</button>
+            <button class="download-cv">Download CV</button>
+          </div>
+        </div>
+        <div class="image">
+          <img
+            src="https://images.pexels.com/photos/30754133/pexels-photo-30754133/free-photo-of-stunning-aerial-view-of-london-skyline-at-sunset.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          />
+        </div>
+      </div>
     </section>
   </body>
 </html>
